<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <TextView
            android:id="@+id/tit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textSize="40dp"
            android:textAlignment="center"
            android:textColor="@color/purple_200"
            android:layout_margin="20dp"
            android:text="@string/title" />
        <ImageView
            android:id="@+id/imageView"
            android:layout_width="250dp"
            android:layout_height="160dp"
            android:layout_gravity="center"
            android:layout_margin="20dp"
            app:srcCompat="@drawable/devinette" />


        <EditText
            android:id="@+id/edttxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:hint="@string/saisie"
            android:layout_margin="20dp"
            />

        <Button
            android:id="@+id/btnplay"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="Play"
            />

        <TextView
            android:id="@+id/tvdef"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="20sp"
            android:layout_margin="20dp"
            android:text="@string/def" />


    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>